force-app/main/default/objects/Professional_Development__c/Professional_Development__c.object-meta.xml
<CustomObject>
    <label>Professional Development</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Professional Development Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Developments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>