force-app/main/default/objects/Professional_Development__c/fields/Accrediting_Body__c.field-meta.xml
<CustomField>
    <fullName>Accrediting_Body__c</fullName>
    <label>Accrediting Body</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CE Division Dalhousie</fullName>
            </value>
            <value>
                <fullName>Canadian Council Of Continuing Education And Pharmacy (CCCEP)</fullName>
            </value>
            <value>
                <fullName>Accreditation Council Of Pharmacy (ACPE)</fullName>
            </value>
            <value>
                <fullName>Mainpro+</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>