force-app/main/default/objects/Professional_Development__c/fields/Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Collaboration__c</fullName>
    <label>Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C.1</fullName>
            </value>
            <value>
                <fullName>C.2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>