force-app/main/default/objects/Professional_Development__c/fields/Competencies__c.field-meta.xml
<CustomField>
    <fullName>Competencies__c</fullName>
    <label>Competencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>