force-app/main/default/objects/Professional_Development__c/fields/Course_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Completed_Date__c</fullName>
    <label>Course Completed Date</label>
    <type>Date</type>
</CustomField>