force-app/main/default/objects/Professional_Development__c/fields/Course_Number__c.field-meta.xml
<CustomField>
    <fullName>Course_Number__c</fullName>
    <label>Accreditation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>