force-app/main/default/objects/Professional_Development__c/fields/Eligibility_Date_system__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Date_system__c</fullName>
    <label>Eligibility Date (system)</label>
    <type>Date</type>
</CustomField>