force-app/main/default/objects/Professional_Development__c/fields/Eligible_Renewal_Year__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Renewal_Year__c</fullName>
    <label>Eligible Renewal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>