force-app/main/default/objects/Professional_Development__c/fields/Number_Of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Credits__c</fullName>
    <label>Number Of Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>