force-app/main/default/objects/Professional_Development__c/fields/Other_Accrediting_Body__c.field-meta.xml
<CustomField>
    <fullName>Other_Accrediting_Body__c</fullName>
    <label>Other Accrediting Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>