force-app/main/default/objects/Professional_Development__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Professional Developments</relationshipLabel>
    <relationshipName>Registration_Professional_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>