force-app/main/default/objects/Professional_Development__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal</label>
    <referenceTo>Registration_History__c</referenceTo>
    <relationshipLabel>Professional Developments</relationshipLabel>
    <relationshipName>Professional_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>