force-app/main/default/objects/Professional_Development__c/fields/Renewal_Application__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Professional Developments</relationshipLabel>
    <relationshipName>Renewal_Professional_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>