force-app/main/default/objects/Professional_Development__c/validationRules/Blank_Renewal_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Renewal_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Renewal_Application__c)),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    NOT ( ISBLANK( PRIORVALUE(Renewal_Application__c)) )
)</errorConditionFormula>
    <errorMessage>You cannot edit CEUs that are already linked to a renewal.</errorMessage>
</ValidationRule>