force-app/main/default/objects/Professional_Development__c/validationRules/Update_eligible_renewal_years.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_eligible_renewal_years</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    MONTH(Course_Completed_Date__c) &gt;= 9,
    OR(
        VALUE(Eligible_Renewal_Year__c) &gt; (YEAR(Course_Completed_Date__c) + 2),
        VALUE(Eligible_Renewal_Year__c) &lt; (YEAR(Course_Completed_Date__c) + 1)
    ),
    OR(
        VALUE(Eligible_Renewal_Year__c) &lt;&gt; (YEAR(Course_Completed_Date__c) + 1)
    )
)</errorConditionFormula>
    <errorMessage>Please enter valid value for Renewal Year</errorMessage>
</ValidationRule>