force-app/main/default/objects/Professional_Development__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>Number_Of_Credits__c</columns>
    <columns>Course_Completed_Date__c</columns>
    <columns>Eligible_Renewal_Year__c</columns>
    <columns>Registrant__c</columns>
    <columns>Registration__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>