force-app/main/default/objects/Professional_Development__c/listViews/Professional_Development_Credits.listView-meta.xml
<ListView>
    <fullName>Professional_Development_Credits</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>Number_Of_Credits__c</columns>
    <columns>Competencies__c</columns>
    <columns>Course_Completed_Date__c</columns>
    <columns>Eligible_Renewal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>Professional Development Credits</label>
</ListView>